--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.directory.studio/org.apache.commons.lang -->
+        <dependency>
+           <groupId>org.apache.directory.studio</groupId>
+           <artifactId>org.apache.commons.lang</artifactId>
+           <version>2.6</version>
+        </dependency>
+		
 
 		<dependency>
 			<groupId>mysql</groupId>
